--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div>
             <label id="name-label">Name</label>
             <input type="text" id="name" placeholder="Name" required>
+            <!-- shukla -->
         </div>
         <div>
             <label id="email-label">Email</label>
